--- a/src/main/resources/static/css/styles.css
+++ b/src/main/resources/static/css/styles.css
@@ -4,17 +4,13 @@
  */
 body {
     padding-top: 50px;
-    background: #607D8B;
+    background: #ffffff;
 }
 
 footer {
     padding-left: 15px;
     padding-right: 15px;
     background-color: #f7f7f7;
-}
-
-a {
-    color: #FFFFFF;
 }
 
 .form-control {
@@ -182,15 +178,6 @@ a {
 #info-table {
     border-collapse: separate;
     border-spacing: 1em;
-}
-
-.navbar-fixed-top {
-    background-color: #31708f;
-    box-shadow: 0 0 20px rgba(0, 0, 0, 0.44);
-}
-
-a.navbar-brand:hover {
-    color: #f5f5f5;
 }
 
 .myicon {
