--- a/src/main/resources/templates/Layout.html
+++ b/src/main/resources/templates/Layout.html
@@ -16,12 +16,15 @@
     <link href="/css/styles.css" rel="stylesheet"/>
 </head>
 <body>
-<nav class="navbar navbar navbar-fixed-top dark-primary-color" role="navigation">
+<nav class="navbar navbar navbar-fixed-top" role="navigation">
     <div class="container-fluid">
         <div class="navbar-header">
             <button type="button" class="navbar-toggle" data-toggle="collapse" data-target=".navbar-collapse">
                 <i class="glyphicon glyphicon-align-justify myicon"></i>
             </button>
+            <div class="sidebar-open-icon" onclick="showHide()">
+                <i class="fa fa-arrow-circle-o-left" aria-hidden="true"></i>
+            </div>
             <a class="navbar-brand"><strong>Bookshelves</strong></a>
             <button type="button" class="navbar-left visible-xs open-btn text-primary-color" data-toggle="offcanvas">
                 <i class="glyphicon glyphicon-chevron-left"></i>
@@ -32,10 +35,6 @@
                 <li class="dropdown">
                     <a href="#" class="dropdown-toggle " data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">User <span class="caret"></span></a>
                     <ul class="dropdown-menu small-color">
-                        <li><a href="#">Action</a></li>
-                        <li><a href="#">Another action</a></li>
-                        <li><a href="#">Something else here</a></li>
-                        <li role="separator" class="divider"></li>
                         <li><a href="#" onclick="document.getElementById('logout').submit();">Logout</a></li>
                         <form id="logout" th:action="@{/logout}" method="post"/>
                     </ul>
@@ -55,119 +54,139 @@
     </div>
 </nav>
 
-<div class="container-fluid height sm-fix">
+<div class="container-fluid content height sm-fix">
 
-    <div class="row row-offcanvas row-offcanvas-left height">
+    <style>
+        :root {
+            --primary-color: #2B333E;
+            --primary-text-white: rgba(255, 255, 255, 0.9);
+            --primary-light: #545c69;
+            --primary-dark: #010c18;
+            --secondary-color: #f5f5fa;
+            --secondary-text-black: rgba(0, 0, 0, 0.51);
+            --secondary-light: #ffffff;
+            --secondary-dark: #c2c2c7;
+            --accent-color: #0AF;
+            --trasition__bezier: all 300ms cubic-bezier(0.5, 0.57, 0.42, 1)
+        }
+        .navbar-fixed-top {
+            background-color: var(--secondary-light);
+        }
+        .navbar-brand {
+            color: var(--primary-color);
+        }
+        .navbar-nav li a {
+            color: var(--primary-color);
+        }
+        .content {
+            margin-left: -15px;
+            margin-right: -15px;
+        }
+        .main-content {
+            margin-left: 250px;
+            margin-right: 0px;
+            min-height: 100vh;
+            background-color: var(--secondary-color);
+            padding: 10px;
+            transition: var(--trasition__bezier);
+        }
+        .main-content-close {
+            margin-left: 0px;
+        }
+        .sidebar-open-icon {
+            float: left;
+            margin-right: 11px;
+            height: 50px;
+            font-size: 40px;
+            line-height: 48px;
+            cursor: pointer;
+            transition: transform 300ms;
+        }
+        .sidebar-open-click {
+            transform: rotate(180deg);
+        }
+        .sidebar {
+            width: 250px;
+            height: calc(100vh - 50px);
+            background-color: var(--primary-color);
+            overflow-x: hidden;
+            transition: var(--trasition__bezier);
+            position: fixed;
+            right: 0;
+            left: 0;
+            box-shadow: 0 0 20px rgba(0, 0, 0, 0.44);
+        }
+        .sidebar-close {
+            width: 0px;
+        }
+        .sidebar-nav {
+            list-style: none;
+             -webkit-padding-start: 0px;
+        }
+        .sidebar-close-nav {
+            opacity: 0;
+        }
+        .sidebar-nav li {
+            box-sizing: border-box;
+            border-left-color: transparent;
+            border-left-width: 5px;
+            border-left-style: solid;
+            cursor: pointer;
+        }
+        .sidebar-nav li:hover {
+            background-color: var(--primary-dark);
+            border-left-color: var(--accent-color);
+        }
+        .sidebar-nav li a {
+            color: var(--primary-text-white);
+            display: inline-block;
+            width: 100%;
+            text-decoration: none;
+            padding: 8px 10px;
+            text-overflow: ellipsis;
+            white-space: nowrap;
+            overflow: hidden;
+        }
 
-        <div class="col-sm-3 col-md-2 sidebar-offcanvas" id="sidebar" role="navigation">
-            <ul class="nav nav-sidebar">
-                <li><a  th:href="@{/books}"><strong>My Books</strong></a></li>
-                <li><a href=""><strong>To Read</strong></a></li>
-                <li><a href=""><strong>Currently Reading</strong></a></li>
-                <li><a href=""><strong>Completed</strong></a></li>
-            </ul>
-            <hr/>
-            <ul class="nav nav-sidebar">
-                <li th:each="shelf :${shelves}"><a><strong th:text="${shelf}"></strong></a></li>
-                <li class="text-right"><a>New List +</a></li>            </ul>
-
-        </div><!--/span-->
-
-        <div class="col-sm-9 col-md-10 main height">
-
-            <!--Everything Goes Here-->
-            <div layout:fragment="content"></div>
-            <!--End Everything-->
-
-        </div><!--/row-->
+        .sidebar-nav__separator {
+            margin: 0px;
+            border-top-color: var(--primary-text-white);
+        }
+        #footer {
+            height: 32px;
+            background: none repeat scroll 0 0 var(--secondary-dark);
+        }
+    </style>
+    <div class="sidebar">
+        <ul class="sidebar-nav">
+            <li><a th:href="@{/books}">My Books</a></li>
+            <li><a href="">Currently Reading</a></li>
+            <li><a href="">To Read</a></li>
+            <li><a href="">Completed</a></li>
+            <hr class="sidebar-nav__separator"/>
+            <li th:each="shelf :${shelves}"><a th:text="${shelf}"></a></li>
+            <li><a style="text-align: right">New Shelf  +</a></li>
+        </ul>
     </div>
-    <!--<style>-->
-        <!--.content {-->
-            <!--display: flex;-->
-            <!--flex-direction: row;-->
-            <!--margin-left: -15px;-->
-            <!--margin-right: -15px;-->
-        <!--}-->
-        <!--.sidebar {-->
-            <!--width: 250px;-->
-            <!--min-height: 100vh;-->
-            <!--background-color: var(&#45;&#45;secondary-background-color);-->
-            <!--overflow-x: hidden;-->
-            <!--transition: all 300ms cubic-bezier(.5,.57,.37,1.16);-->
-        <!--}-->
-        <!--.main-content {-->
-            <!--flex: 1;-->
-            <!--min-height: 100vh;-->
-            <!--background-color: white;-->
-            <!--padding: 10px;-->
-        <!--}-->
-        <!--.sidebar-nav {-->
-            <!--list-style: none;-->
-            <!-- -webkit-padding-start: 0px;-->
-        <!--}-->
-        <!--.sidebar-close {-->
-            <!--width: 0px;-->
-        <!--}-->
-        <!--.sidebar-nav li {-->
-            <!--padding: 10px 20px;-->
-        <!--}-->
-        <!--.sidebar-close-nav {-->
-            <!--opacity: 0;-->
-        <!--}-->
-        <!--:root {-->
-            <!--&#45;&#45;primary-background-color: #1F2833;-->
-            <!--&#45;&#45;light-primary-background-color: #c5c6c7;-->
-            <!--&#45;&#45;secondary-background-color: #45a29e;-->
-            <!--&#45;&#45;accent-color: #66fcf1;-->
-            <!--&#45;&#45;secondary-text-color-white: rgba(255, 255, 255, 0.7);-->
+    <div class="main-content">
+        <div layout:fragment="content"></div>
+    </div>
+</div>
 
-        <!--}-->
-        <!--.navbar-fixed-top {-->
-            <!--background-color: var(&#45;&#45;primary-background-color);-->
-        <!--}-->
-        <!--.sidebar-nav li a {-->
-            <!--color: var(&#45;&#45;secondary-text-color-white);-->
-            <!--display: inline-block;-->
-            <!--width: 100%;-->
-            <!--text-decoration: none;-->
-            <!--font-weight: 900;-->
-        <!--}-->
-
-        <!--.sidebar-nav li:hover {-->
-            <!--background-color: var(&#45;&#45;accent-color);-->
-        <!--}-->
-    <!--</style>-->
-    <!--<script>-->
-        <!--//<![CDATA[-->
-        <!--function showHide() {-->
-            <!--$('.sidebar-nav').toggleClass('sidebar-close-nav');-->
-            <!--$('.sidebar').toggleClass('sidebar-close');-->
-        <!--}-->
-        <!--//]]> -->
-    <!--</script>-->
-    <!--<div class="content">-->
-        <!--<div class="sidebar">-->
-            <!--<ul class="sidebar-nav">-->
-                <!--<li><a href="">My Books</a></li>-->
-                <!--<li><a href="">My Books</a></li>-->
-                <!--<li><a href="">My Books</a></li>-->
-                <!--<li><a href="">My Books</a></li>-->
-                <!--<hr/>-->
-                <!--<li th:each="shelf :${shelves}"><a th:text="${shelf}"></a></li>-->
-            <!--</ul>-->
-        <!--</div>-->
-        <!--<div class="main-content">-->
-            <!--<button class="btn btn-primary" type="button" onclick="showHide()">Button</button>-->
-            <!--<div layout:fragment="content"></div>-->
-        <!--</div>-->
-    <!--</div>-->
-</div><!--/.container-->
-
-<footer>
+<footer id="footer">
     <p class="pull-right text-primary-color">©2017 Reading List</p>
 </footer>
 
-<!-- scriptreferences -->
+<script>
+    //<![CDATA[
+    function showHide() {
+        $('.sidebar-nav').toggleClass('sidebar-close-nav');
+        $('.sidebar').toggleClass('sidebar-close');
+        $('.main-content').toggleClass('main-content-close');
+        $('.sidebar-open-icon').toggleClass('sidebar-open-click')
+    }
+    //]]>
+</script>
 <script src="//ajax.googleapis.com/ajax/libs/jquery/2.0.2/jquery.min.js"></script>
 <script src="/js/bootstrap.min.js"></script>
 <script src="/js/scripts.js"></script>
