--- a/src/main/resources/templates/Layout.html
+++ b/src/main/resources/templates/Layout.html
@@ -4,7 +4,7 @@
 <head lang="en">
     <meta http-equiv="content-type" content="text/html; charset=UTF-8"/>
     <meta charset="utf-8"/>
-    <title>Bookshelves</title>
+    <title>Bookcase</title>
     <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1"/>
     <link href="/css/bootstrap.min.css" rel="stylesheet"/>
     <!--[if lt IE 9]>
@@ -25,7 +25,7 @@
                 <div class="sidebar-open-icon" onclick="showHide()">
                     <i class="fa fa-arrow-circle-o-left" aria-hidden="true"></i>
                 </div>
-                <a class="navbar-brand"><strong>Bookshelves</strong></a>
+                <a class="navbar-brand"><strong>Bookcase</strong></a>
                 <button type="button" class="navbar-left visible-xs open-btn text-primary-color" data-toggle="offcanvas">
                     <i class="glyphicon glyphicon-chevron-left"></i>
                 </button>
@@ -60,8 +60,9 @@
             --primary-light: #545c69;
             --primary-dark: #010c18;
             --secondary-color: #f5f5fa;
-            --secondary-text-black: rgba(0, 0, 0, 0.51);
+            --secondary-text-black: rgba(0, 0, 0, 0.6);
             --secondary-light: #ffffff;
+            --secondary-light-text-black: rgb(0, 0, 0);
             --secondary-dark: #c2c2c7;
             --accent-color: #0AF;
             --trasition__bezier: all 300ms cubic-bezier(0.5, 0.57, 0.42, 1);
@@ -125,7 +126,7 @@
             position: fixed;
             right: 0;
             left: 0;
-            box-shadow: 0 0 20px rgba(0, 0, 0, 0.44);
+            box-shadow: var(--z-depth-3);
         }
         .sidebar-close {
             width: 0px;
