--- a/src/main/resources/templates/Cards.html
+++ b/src/main/resources/templates/Cards.html
@@ -16,63 +16,124 @@
             display: flex;
             flex-direction: row;
             flex-wrap: wrap;
-            justify-content: space-around;
+            justify-content: center;
         }
         .card {
             display: inline-flex;
-            border-radius: 2px;
+            border-radius: 4px;
             margin: 10px;
-            box-shadow: var(--z-depth-2);
+            box-shadow: var(--elevation--z4);
         }
         .card-img {
             height: 150px;
             width: 100px;
-            border-radius: 2px 0px 0px 2px;
+            border-top-left-radius: inherit;
+            border-bottom-left-radius: inherit;
         }
         .card-content {
             height: 150px;
             width: 200px;
             padding: 10px;
             box-sizing: border-box;
-            border-radius: 0px 2px 2px 0px;
+            border-top-right-radius: inherit;
+            border-bottom-right-radius: inherit;
             background-color: var(--secondary-light);
-        }
-        .card-content h4 {
-
-        }
-        .card-content a {
-            /*text-decoration: none;*/
         }
         .card-content h4 a {
             color: var(--secondary-light-text-black);
         }
         .card-content h4 a:hover {
             color: var(--primary-color);
-            text-shadow: var(--z-depth-1);
         }
         .card-content p a {
             color: var(--secondary-text-black);
         }
         .card-content p a:hover {
             color: var(--primary-light);
-            text-shadow: var(--z-depth-1);
         }
         .card-content hr {
             margin: 5px -10px;
         }
+        .card-page-header {
+            width: 100%;
+            height: 50px;
+            margin: 0px 10px;
+            border-bottom: 1px solid var(--secondary-light);
+        }
+        .card-page-header h2 {
+            color: var(--primary-dark);
+            display: inline-block;
+        }
+        .btn-link {
+            color: var(--primary-dark);
+        }
+        .placeholder {
+            width: 300px;
+            visibility: hidden;
+            height: 0;
+            padding: 0;
+            margin: 10px;
+            border-top-width: 0;
+            border-bottom-width: 0;
+        }
+        .card-page-header>div.dropdown {
+            display: inline-block;
+            margin-left: 10px;
+        }
+        .card-details-container {
+            height: 115px;
+        }
+        .card-author {
+
+        }
+        .card-footer>small.page-count {
+            float: right;
+            line-height: 22px;
+        }
     </style>
     <div class="card-holder">
+        <div class="card-page-header">
+            <h2>My Books</h2>
+            <div class="dropdown">
+                <button class="btn btn-link dropdown-toggle" type="button" id="dropdownMenu1" data-toggle="dropdown" aria-haspopup="true" aria-expanded="true">
+                    Sorting
+                    <span class="caret"></span>
+                </button>
+                <ul class="dropdown-menu" aria-labelledby="dropdownMenu1">
+                    <li><a th:href="@{'/books/4'}">Date Added Ascending</a></li>
+                    <li><a th:href="@{'/books/5'}">Date Added Descending</a></li>
+                    <li><a th:href="@{'/books/6'}">Title Ascending</a></li>
+                    <li><a th:href="@{'/books/7'}">Title Descending</a></li>
+                    <li><a th:href="@{'/books/2'}">Page Count Ascending</a></li>
+                    <li><a th:href="@{'/books/3'}">Page Count Descending</a></li>
+                    <li><a th:href="@{'/books/0'}">Author Ascending</a></li>
+                    <li><a th:href="@{'/books/1'}">Author Descending</a></li>
+                </ul>
+            </div>
+        </div>
         <div class="card" th:each="book :${results}">
             <img class="card-img" th:src="${book.imageUrl}"/>
             <div class="card-content">
-                <h4><a th:href="@{'/bookinfo/'+${book.isbn13}}" th:text="${book.title}" th:title="${book.title}"></a></h4>
-                <hr/>
-                <p th:each="author :${book.authors}">
-                    <a th:href="@{'/author/'+${author.id}}" th:text="${author.firstName} +' '+ ${author.lastName}"
-                       th:title="${author.firstName} +' '+ ${author.lastName}"></a>
-                </p>
+                <div class="card-details-container">
+                    <div class="card-title">
+                        <h4><a th:href="@{'/bookinfo/'+${book.isbn13}}" th:text="${book.title}" th:title="${book.title}"></a></h4>
+                    </div>
+                    <hr/>
+                    <div class="card-author">
+                        <p th:each="author :${book.authors}">
+                            <a th:href="@{'/author/'+${author.id}}" th:text="${author.firstName} +' '+ ${author.lastName}"
+                               th:title="${author.firstName} +' '+ ${author.lastName}"></a>
+                        </p>
+                    </div>
+                </div>
+                <div class="card-footer">
+                    <small class="date" th:text="${book.dateCreated}"></small>
+                    <small class="page-count" th:text="${book.pageCount}"></small>
+                </div>
             </div>
         </div>
+        <div class="placeholder"></div>
+        <div class="placeholder"></div>
     </div>
 </div>
 <!--End Everything-->
