--- a/src/main/resources/templates/Cards.html
+++ b/src/main/resources/templates/Cards.html
@@ -83,12 +83,24 @@
         .card-details-container {
             height: 115px;
         }
+        .card-title {
+
+        }
         .card-author {
 
         }
         .card-footer>small.page-count {
             float: right;
             line-height: 22px;
+        }
+        .limit-2{
+            overflow: hidden;
+            text-overflow: ellipsis;
+            display: -webkit-box;
+            line-height: 22px;
+            max-height: 48px;
+            -webkit-line-clamp: 2;
+            -webkit-box-orient: vertical;
         }
     </style>
     <div class="card-holder">
@@ -100,14 +112,14 @@
                     <span class="caret"></span>
                 </button>
                 <ul class="dropdown-menu" aria-labelledby="dropdownMenu1">
-                    <li><a th:href="@{'/books/4'}">Date Added Ascending</a></li>
-                    <li><a th:href="@{'/books/5'}">Date Added Descending</a></li>
-                    <li><a th:href="@{'/books/6'}">Title Ascending</a></li>
-                    <li><a th:href="@{'/books/7'}">Title Descending</a></li>
-                    <li><a th:href="@{'/books/2'}">Page Count Ascending</a></li>
-                    <li><a th:href="@{'/books/3'}">Page Count Descending</a></li>
-                    <li><a th:href="@{'/books/0'}">Author Ascending</a></li>
-                    <li><a th:href="@{'/books/1'}">Author Descending</a></li>
+                    <li><a th:href="@{'/books/5'}">Date Added: New to Old</a></li>
+                    <li><a th:href="@{'/books/4'}">Date Added: Old to New</a></li>
+                    <li><a th:href="@{'/books/6'}">Title: A to Z</a></li>
+                    <li><a th:href="@{'/books/7'}">Title: Z to A</a></li>
+                    <li><a th:href="@{'/books/2'}">Page Count: Low to High</a></li>
+                    <li><a th:href="@{'/books/3'}">Page Count: High to Low</a></li>
+                    <li><a th:href="@{'/books/0'}">Author: A to Z</a></li>
+                    <li><a th:href="@{'/books/1'}">Author: Z to A</a></li>
                 </ul>
             </div>
         </div>
@@ -115,14 +127,14 @@
             <img class="card-img" th:src="${book.imageUrl}"/>
             <div class="card-content">
                 <div class="card-details-container">
-                    <div class="card-title">
+                    <div class="card-title limit-2">
                         <h4><a th:href="@{'/bookinfo/'+${book.isbn13}}" th:text="${book.title}" th:title="${book.title}"></a></h4>
                     </div>
                     <hr/>
-                    <div class="card-author">
+                    <div class="card-author limit-2">
                         <p th:each="author :${book.authors}">
-                            <a th:href="@{'/author/'+${author.id}}" th:text="${author.firstName} +' '+ ${author.lastName}"
-                               th:title="${author.firstName} +' '+ ${author.lastName}"></a>
+                            <a th:href="@{'/author/'+${author.id}}" th:text="${author.lastName} +', '+ ${author.firstName}"
+                               th:title="${author.lastName} +', '+ ${author.firstName}"></a>
                         </p>
                     </div>
                 </div>
